# tts_starter_template

./: README.md  pyproject.toml  setup.py
.github/workflows/: run_tests_on_pr.yml
ci/: sphinx_ignore_tags.txt
docs/: conf.py  cv.md  foo.rst  index.rst  resume.md
src/mrmuszynski_resume/: compiler.py
src/mrmuszynski_resume/test/: test_foo.py
src/tts_starter_template/: foo.py
