[project]
name = "tts-starter-template"
description = "A starter repo to help users quickly set up a Teamtools Studio project with common structure, configs, and package scaffolding."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Unlicense"}
authors = [
  { name = "shanemb", email = "shane.m.bonkowski@jpl.nasa.gov" },
  { name = "muszynsk", email = "matt.muszynski@jpl.nasa.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Unlicense",
]
dependencies = [
  "pytest", 
  "tomli",
  "tts-utilities>=0.2.1,<1.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/orgs/NASA-JPL-Teamtools-Studio/tts_starter_template"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[build-system]
requires = [
  "setuptools", 
  "wheel", 
  "toml", 
  "tts-utilities>=0.2.1,<1.0.0", 
  "setuptools-scm"
  ]
build-backend = "setuptools.build_meta"