[project]
name = "mrmuszynski-resume"
description = "Matt's professional marketing"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Unlicense"}
authors = [
  { name = "muszynsk", email = "matt.muszynski@jpl.nasa.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Unlicense",
]

dynamic = ["version"]

dependencies = [
  "myst-parser",
  "rinohtype",
  "sphinx",
  "sphinx-rtd-theme"
  # "tts-utilities>=0.2.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]


[project.urls]
Homepage = "https://github.com/mrmuszynski/resume"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[build-system]
requires = [
  "setuptools", 
  "wheel", 
  "toml", 
  "setuptools-scm"
  ]
build-backend = "setuptools.build_meta"